--- a/secret.yaml
+++ b/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: sysdig-agent
 type: Opaque
 data:
-  SECURE_API: {SECURE_API_TOKEN}
+  SECURE_API: MTg5OWIwZTUtNDM1Mi00NjI1LTgzYWEtYTVlMTY0NzA3OTI4
